--- a/DESCRIPTION.en_us.html
+++ b/DESCRIPTION.en_us.html
@@ -3,5 +3,5 @@ There are five key stylistic principles taken as a main framework for the creati
 </p>
 <p>
 The Sanity is designed by Anna Seslavinskaya.
-To contribute, see <a href="https://github.com/seslanna/sanghakali">github.com/seslanna/sanghakali</a>
+To contribute, see <a href="https://github.com/seslanna/sanity">github.com/seslanna/sanity</a>
 </p>
